--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -11,10 +11,9 @@
         android:id="@+id/buttonHeroes"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
+        android:layout_above="@+id/buttonWeapons"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="12dp"
         android:text="Heroes"
         android:textSize="30sp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -27,10 +26,9 @@
         android:id="@+id/buttonWeapons"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
+        android:layout_above="@+id/buttonSkills"
+        android:layout_alignLeft="@+id/buttonSpecials"
+        android:layout_alignStart="@+id/buttonSpecials"
         android:text="Weapons"
         android:textSize="25sp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -44,10 +42,8 @@
         android:id="@+id/buttonSkills"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
+        android:layout_centerHorizontal="true"
+        android:layout_centerVertical="true"
         android:text="Skills"
         android:textSize="25sp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -61,10 +57,9 @@
         android:id="@+id/buttonSpecials"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
+        android:layout_above="@+id/buttonAssists"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="19dp"
         android:text="Specials"
         android:textSize="25sp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -78,10 +73,9 @@
         android:id="@+id/buttonAssists"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
+        android:layout_above="@+id/buttonQuit"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="20dp"
         android:text="Assists"
         android:textSize="25sp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -95,10 +89,9 @@
         android:id="@+id/buttonQuit"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="17dp"
         android:text="Quit"
         android:textSize="25sp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -106,4 +99,4 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.861" />
-</android.support.constraint.ConstraintLayout>
+</RelativeLayout>
